# AWE

./: .gitignore  MIT License  README.md
backend/: requirements.txt
backend/app/: api.py  config.py  main.py  pyproject.toml  requirements.txt  ws_manager.py
backend/app/agent/: executor.py  graph_state.py  memory.py  models.py  planner.py
backend/app/agent/tools/: browser_tool.py  file_tool.py  http_tool.py
backend/app/sandbox/: Dockerfile  runner.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.cjs  tsconfig.json  vite.config.mjs
frontend/src/: App.tsx  config.ts  main.tsx
frontend/src/components/: GraphView.tsx  Logo.tsx  TaskConsole.tsx  WsClient.ts
frontend/src/styles/: tailwind.css
