[tool.poetry]
name = "awe-backend"
version = "0.1.0"
description = "Autonomous Workflow Engine (AWE) backend service"
authors = ["Nirav Patel <your@email.com>"]
readme = "README.md"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"

# Web framework
fastapi = "^0.110.0"
uvicorn = { extras = ["standard"], version = "^0.29.0" }

# Async / HTTP
aiohttp = "^3.9.3"

# Data & utils
pydantic = "^2.6.4"
python-dotenv = "^1.0.1"

# Optional but common
loguru = "^0.7.2"

# If you use LLM / agents / tools, add them here explicitly
# openai = "^1.14.0"
# httpx = "^0.27.0"

[tool.poetry.group.dev.dependencies]
pytest = "^8.1.1"
black = "^24.2.0"
ruff = "^0.3.4"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"